--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="search">
                 <input type="text" id="city_input" placeholder="Enter city name" class="px-4 py-2 border border-gray-300  focus:outline-none focus:ring-2 focus:ring-blue-500" />
                <button id="btn" onclick="getweather()">Search</button>
-               <div id="popup">Please Enter city name</div>
+               <div id="popup">Please Enter city name!</div>
+               <div id="errorbox"></div>
         </div>
         <div class="location ">
             <div class="locationdetail">
